[gd_scene load_steps=4 format=3 uid="uid://cg2d0qosxk7wf"]

[ext_resource type="PackedScene" uid="uid://chx3lxrujcjnr" path="res://i_weapon.tscn" id="1_jembg"]
[ext_resource type="Script" path="res://bow.gd" id="2_nqs51"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o3tgo"]
radius = 495.025

[node name="bow" instance=ExtResource("1_jembg")]
script = ExtResource("2_nqs51")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource("CircleShape2D_o3tgo")

[node name="Timer" type="Timer" parent="." index="1"]

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
